--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -5,6 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<p th:text="'hello:'+${name}" ></p>
+  <img src="/img/meta9.png">
 </body>
 </html>
